--- a/sklep_internetowy/src/App.css
+++ b/sklep_internetowy/src/App.css
@@ -103,3 +103,49 @@ nav ul li a:hover {
 .cart-summary button:hover {
   background-color: #555;
 }
+
+.column img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  border: none;
+}
+
+.row {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  position: relative;
+  text-align: center;
+  color:  black;
+}
+
+.column {
+  flex: 1;
+  padding: 0;
+  position: relative;
+}
+
+/* Media queries dla mniejszych ekranów */
+@media (max-width: 1100px) {
+  .column {
+    flex: 1 1 50%;
+  }
+}
+
+@media (max-width: 768px) {
+  .column {
+    flex: 1 1 100%;
+  }
+  .centered{
+    font-size: 6vw;
+  }
+}
+.centered {
+  font-size: 4vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
